Remove indra
It was messing up gradle

Signed-off-by: Webhead1104 <webhead1104@hotmail.com>